[gd_scene load_steps=7 format=3 uid="uid://baeernr7qn5w0"]

[ext_resource type="Script" uid="uid://c8lpj1eg4rr7v" path="res://addons/nodescript/ui/enum_editor.gd" id="1"]
[ext_resource type="Theme" uid="uid://bbkufuj4lk7no" path="res://addons/nodescript/ui/styling/node_script_styling.tres" id="2_jdq1b"]
[ext_resource type="PackedScene" uid="uid://orgselector" path="res://addons/nodescript/ui/org_selector.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://codefooter" path="res://addons/nodescript/ui/code_footer.tscn" id="4_codefooter"]

[sub_resource type="DPITexture" id="DPITexture_ykop3"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"12\"><path fill=\"#e0e0e0\" d=\"M3 2a2 2 0 0 0-2 2v1a1 1 0 0 0 0 2v1a2 2 0 0 0 2 2h1V8H3V4h1V2zm3 0v8h4V8H8V7h2V5H8V4h2V2zm6 0v2h1v4h-1v2h1a2 2 0 0 0 2-2V7a1 1 0 0 0 0-2V4a2 2 0 0 0-2-2z\"/></svg>
"
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="DPITexture" id="DPITexture_umucj"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"M6 1a2 2 0 0 0-2 2v7H1v3a2 2 0 0 0 2 2h7a2 2 0 0 0 2-2V5h3V3a2 2 0 0 0-2-2z\"/><path fill-opacity=\".2\" d=\"M6 1a2 2 0 0 0-2 2v7H1v3a2 2 0 1 0 4 0V3a1 1 0 0 1 2 0v3h5V5H8V3a2 2 0 0 0-2-2zM2 11h2v2a1 1 0 0 1-2 0z\"/></svg>
"
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[node name="EnumEditor" type="PanelContainer"]
visible = false
custom_minimum_size = Vector2(0, 220)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_jdq1b")
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_jdq1b")

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_jdq1b")
theme_override_constants/separation = 8

[node name="Panel" type="Panel" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("2_jdq1b")
theme_type_variation = &"panel_header"

[node name="Header" type="HBoxContainer" parent="Margin/VBox/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("2_jdq1b")
alignment = 1

[node name="HeaderIcon" type="TextureRect" parent="Margin/VBox/Panel/Header"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme = ExtResource("2_jdq1b")
texture = SubResource("DPITexture_ykop3")
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="Margin/VBox/Panel/Header"]
layout_mode = 2
theme = ExtResource("2_jdq1b")
theme_type_variation = &"panel_header_text"
text = "Enum"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_jdq1b")
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="Margin/VBox/NameRow"]
layout_mode = 2
text = "Name:"

[node name="EnumName" type="LineEdit" parent="Margin/VBox/NameRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enum name"

[node name="ValuesLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
theme = ExtResource("2_jdq1b")
theme_override_font_sizes/font_size = 12
text = "Values"

[node name="ValuesContainer" type="VBoxContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_jdq1b")
theme_override_constants/separation = 4

[node name="AddValueButton" type="Button" parent="Margin/VBox/ValuesContainer"]
layout_mode = 2
theme = ExtResource("2_jdq1b")
text = "+ Add Value"

[node name="OrgSelector" parent="Margin/VBox" instance=ExtResource("3")]

[node name="ContentSpacer" type="Control" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_jdq1b")

[node name="Signature" type="Panel" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme = ExtResource("2_jdq1b")
theme_type_variation = &"panel_header"

[node name="SignatureHeader" type="HBoxContainer" parent="Margin/VBox/Signature"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jdq1b")
theme_override_constants/separation = 6
alignment = 1

[node name="SignatureIcon" type="TextureRect" parent="Margin/VBox/Signature/SignatureHeader"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme = ExtResource("2_jdq1b")
texture = SubResource("DPITexture_umucj")
expand_mode = 1
stretch_mode = 5

[node name="SignatureTitle" type="Label" parent="Margin/VBox/Signature/SignatureHeader"]
layout_mode = 2
theme = ExtResource("2_jdq1b")
theme_type_variation = &"panel_header_text"
text = "Code Output"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Actions" parent="Margin/VBox" instance=ExtResource("4_codefooter")]
theme = ExtResource("2_jdq1b")
